Change updateBelief to max-sum for constraint AllDifferentDC

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,9 @@ minicp.zip
 userguide/build/
 userguide/userguideenv/
 dependency-reduced-pom.xml
+
+#eclipse
+.project
+.classpath
+.settings
+bin/
